kubernetes/microservice-caller.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-caller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-caller
  template:
    metadata:
      labels:
        app: microservice-caller
    spec:
      containers:
        - name: caller
          image: curlimages/curl:latest
          command:
            - /bin/sh
            - -c
            - "while true; do curl http://nginx-service; sleep 5; done;"
